; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_channel_get_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_channel_get_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*, i32*)* @pwmbus_channel_get_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwmbus_channel_get_config(i32 %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @device_get_parent(i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @PWMBUS_CHANNEL_GET_CONFIG(i32 %10, i32 %11, i32* %12, i32* %13)
  ret i32 %14
}

declare dso_local i32 @PWMBUS_CHANNEL_GET_CONFIG(i32, i32, i32*, i32*) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
